<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">健康时钟</string>
    <string name="add_alarm">新增闹钟</string>
    <string name="delete_alarm">取消闹钟</string>
    <string name="enable_alarm">启用闹钟</string>
    <string name="disable_alarm">停用闹钟</string>
    <string name="delete_alarm_confirm">将会取消此闹钟。</string>
    <string name="show_clock">显示时钟</string>
    <string name="hide_clock">隐藏时钟</string>
    <string name="label">标签</string>
    <string name="default_label">闹钟</string>
    <string name="set_alarm">设置闹钟</string>
    <string name="alarm_vibrate">振动</string>
    <string name="alarm_repeat">重复</string>
    <string name="alert">铃声</string>
    <string name="time">时间</string>
    <string name="alarm_alert_dismiss_text">关闭提醒</string>
    <string name="alarm_alert_alert_silenced">闹钟响铃时间为 <xliff:g id="minutes">%d</xliff:g> 分钟</string>
    <string name="alarm_alert_snooze_text">推迟提醒</string>
    <string name="alarm_alert_snooze_set">暂停 <xliff:g id="minutes">%d</xliff:g> 分钟。</string>
    <string-array name="alarm_set">
        <item>已将此闹钟设置为从现在起不到 1 分钟后提醒。</item>
        <item>已将此闹钟设置为从现在起 <xliff:g id="DAYS" example="2 days">%1$s</xliff:g> 后再提醒。</item>
        <item>已将此闹钟设置为从现在起 <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> 后再提醒。</item>
        <item>已将此闹钟设置为从现在起 <xliff:g id="DAYS" example="2 days">%1$s</xliff:g><xliff:g id="HOURS" example="2 hours">%2$s</xliff:g> 后再提醒。</item>
        <item>已将此闹钟设置为从现在起 <xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> 后再提醒。</item>
        <item>已将此闹钟设置为从现在起 <xliff:g id="DAYS" example="2 days">%1$s</xliff:g><xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> 后再提醒。</item>
        <item>已将此闹钟设置为从现在起 <xliff:g id="HOURS" example="2 hours">%2$s</xliff:g><xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> 后再提醒。</item>
        <item>已将该闹钟设置为从现在起 <xliff:g id="DAYS" example="2 days">%1$s</xliff:g><xliff:g id="HOURS" example="2 hours">%2$s</xliff:g><xliff:g id="MINUTES" example="2 minutes">%3$s</xliff:g> 后再提醒。</item>
    </string-array>
    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="days">%s</xliff:g> 天"</string>
    <string name="hour">1 小时</string>
    <string name="hours"><xliff:g id="hours">%s</xliff:g> 小时</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="minutes">%s</xliff:g> 分钟"</string>
    <string name="every_day">每天</string>
    <string name="never">一律不</string>
    <string name="now">现在</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">选择要显示的时钟。</string>
    <string name="analog_gadget">模拟时钟</string>
    <string name="settings">设置</string>
    <string name="alarm_in_silent_mode_title">静音模式下闹钟响</string>
    <string name="alarm_in_silent_mode_summary">手机处于静音模式时，闹钟仍会响</string>
    <string name="snooze_duration_title">再响间隔</string>
    <string-array name="snooze_duration_entries">
        <item>5 分钟</item>
        <item>10 分钟</item>
        <item>15 分钟</item>
        <item>20 分钟</item>
        <item>25 分钟</item>
        <item>30 分钟</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string name="done">完成</string>
    <string name="revert">还原</string>
    <string name="alarm_volume_title">闹钟音量</string>
    <string name="alarm_volume_summary">设置闹钟音量</string>
    <string name="silent_alarm_summary">静音</string>
    <string name="alarm_notify_text">选择暂停或关闭此闹钟。</string>
    <string name="alarm_notify_snooze_label"><xliff:g id="label">%s</xliff:g>（已暂停）</string>
    <string name="alarm_notify_snooze_text">已将闹钟设置为从现在起 <xliff:g id="time">%s</xliff:g>后再提醒。选中可以取消。</string>
    <string name="volume_button_setting_title">侧边按钮功用</string>
    <string name="volume_button_setting_summary">设置侧边按钮在闹钟启动时的功用</string>
    <string name="default_ringtone_setting_title">设置默认铃声</string>
    <string name="default_ringtone">默认铃声</string>
    <string-array name="volume_button_setting_entries">
        <item>无</item>
        <item>暂停</item>
        <item>关闭</item>
    </string-array>
    <string-array name="volume_button_setting_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="chinese_hour">时辰</string>
    <string name="solar_terms">节气</string>
    <string name="solar_terms_0">小寒</string>
	<string name="solar_terms_1">大寒</string>
	<string name="solar_terms_2">立春</string>
	<string name="solar_terms_3">雨水</string>
	<string name="solar_terms_4">惊蛰</string>
	<string name="solar_terms_5">春分</string>
	<string name="solar_terms_6">清明</string>
	<string name="solar_terms_7">谷雨</string>
	<string name="solar_terms_8">立夏</string>
	<string name="solar_terms_9">小满</string>
	<string name="solar_terms_10">芒种</string>
	<string name="solar_terms_11">夏至</string>
	<string name="solar_terms_12">小暑</string>
	<string name="solar_terms_13">大暑</string>
	<string name="solar_terms_14">立秋</string>
	<string name="solar_terms_15">处暑</string>
	<string name="solar_terms_16">白露</string>
	<string name="solar_terms_17">秋分</string>
	<string name="solar_terms_18">寒露</string>
	<string name="solar_terms_19">霜降</string>
	<string name="solar_terms_20">立冬</string>
	<string name="solar_terms_21">小雪</string>
	<string name="solar_terms_22">大雪</string>
	<string name="solar_terms_23">冬至</string>
    <string name="title_bar_shadow">标题栏阴影</string>
    <string name="solution">方案</string>
    <string name="this_solution_can_not_be_found">找不到这个方案</string>
    <string name="favorites">收藏</string>
    <string name="the_solution_no_favorites">您还没有收藏方案</string>
    <string name="cancel">取消</string>
    <string name="enter">确定</string>
    <string name="back">返回</string>
    <string name="comply">遵从</string>
    <string name="custom">自定</string>
    <string name="cure">治愈</string>
    <string name="improvement">改善</string>
    <string name="invalid">无效</string>
    <string name="aggravating">加重</string>
    <string name="cost">性价比</string>
    <string name="convenience">方便性</string>
    <string name="overall">总评价</string>
    <string name="welcome_good_morning">早上好</string>
    <string name="welcome_good_noon">中午好</string>
    <string name="welcome_good_afternoon">下午好</string>
    <string name="welcome_good_evening">晚上好</string>
	<string name="getting_weather_information">正在获取天气信息&#8230;</string>
    <string name="unable_to_get_weather_information">无法获取天气信息!</string>
    <string name="wealther_info_updated">天气更新成功!</string>
    <string name="wealther_icon_0">v</string>
	<string name="wealther_icon_1">1</string>
	<string name="wealther_icon_2">`</string>
	<string name="wealther_icon_3">4</string>
	<string name="wealther_icon_4">z</string>
	<string name="wealther_icon_5">z</string>
	<string name="wealther_icon_6">e</string>
	<string name="wealther_icon_7">6</string>
	<string name="wealther_icon_8">9</string>
	<string name="wealther_icon_9">9</string>
	<string name="wealther_icon_10">9</string>
	<string name="wealther_icon_11">9</string>
	<string name="wealther_icon_12">9</string>
	<string name="wealther_icon_13">o</string>
	<string name="wealther_icon_14">o</string>
	<string name="wealther_icon_15">]</string>
	<string name="wealther_icon_16">]</string>
	<string name="wealther_icon_17">]</string>
	<string name="wealther_icon_18">s</string>
	<string name="wealther_icon_19">e</string>
	<string name="wealther_icon_20">(</string>
	<string name="wealther_icon_21">6</string>
	<string name="wealther_icon_22">9</string>
	<string name="wealther_icon_23">9</string>
	<string name="wealther_icon_24">9</string>
	<string name="wealther_icon_25">9</string>
	<string name="wealther_icon_26">o</string>
	<string name="wealther_icon_27">]</string>
	<string name="wealther_icon_28">]</string>
	<string name="wealther_icon_29">(</string>
	<string name="wealther_icon_30">(</string>
	<string name="wealther_icon_31">(</string>
    <string name="alarm_category_image_content_description">闹钟分类图标</string>
    <string name="alarm_category_work_rest">起床睡觉</string>
    <string name="alarm_category_take_medicine">吃药提醒</string>
    <string name="alarm_category_movement">运动提醒</string>
    <string name="alarm_category_timer">计时器</string>
    <string name="alarm_category_custom">自定义</string>
    <string name="alarm_category_custom_alarm">闹铃</string>
    <string name="edit">编辑</string>
    <string name="close">关闭</string>
    <string name="closed">已关闭</string>
    <string name="open">开启</string>
    <string name="delete">删除</string>
    <string name="skip">跳过</string>
    <string name="no_alarm">点击按钮添加新的闹钟\n健康生活由此开始</string>
    <string name="save">保存</string>
    <string name="set_alarm_custom">设置闹铃</string>
    <string name="wake_time">起床时间</string>
    <string name="cycle">周期</string>
    <string name="remark">备注</string>
    <string name="more">更多</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="the_day_after_tomorrow">后天</string>
    <string name="Monday">星期一</string>
    <string name="Tuesday">星期二</string>
    <string name="Wednesday">星期三</string>
    <string name="Thursday">星期四</string>
    <string name="Friday">星期五</string>
    <string name="Saturday">星期六</string>
    <string name="Sunday">星期日</string>
	<string name="day_of_week_2">周一</string>
	<string name="day_of_week_3">周二</string>
	<string name="day_of_week_4">周三</string>
	<string name="day_of_week_5">周四</string>
	<string name="day_of_week_6">周五</string>
	<string name="day_of_week_7">周六</string>
    <string name="day_of_week_1">周日</string>
    <string name="system_ringtones">系统铃声</string>
    <string name="current_ringtone">当前铃声</string>
    <string name="file_browser">文件浏览</string>
    <string name="floder_is_empty">这是一个空文件夹</string>
    <string name="no_music_files_in_the_folder">该文件夹下没有音乐文件</string>
    <string name="my_account">我的帐户</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="username_email">用户名/邮箱</string>
    <string name="password">密码</string>
    <string name="signup">注册</string>
    <string name="signup_tips">邮箱地址用于找回密码，请填写真实有效地址。\n完成注册代表你接受健康时钟的注册协议。</string>
    <string name="signin">登录</string>
    <string name="logout">注销</string>
    <string name="resume">个人信息</string>
    <string name="edit_resume">编辑个人信息</string>
    <string name="realname">姓名</string>
    <string name="set_realname">设置姓名</string>
    <string name="gender">性别</string>
    <string name="set_gender">设置性别</string>
    <string name="birthday">生日</string>
    <string name="set_birthday">设置生日</string>
    <string name="location">所在地</string>
    <string name="set_location">设置所在地</string>
    <string name="please_select_provinces">请选择省份</string>
    <string name="please_select_city">请选择城市</string>
    <string name="please_select_district">请选择区县</string>
    <string name="update">更新</string>
    <string name="male">男性</string>
    <string name="female">女性</string>
    <string name="after_setting_can_not_be_modified">设置后不可以修改.</string>
    <string name="constitution">体质</string>
    <string name="constitution_tip">了解自己的体质，让我们给你提供更个性化的健康方案。</string>
    <string name="constitution_intro">“世界上没有两片完全相同的叶子”，更没有相同的人。传统中医理论将不同人的体质分为九种，看看以下哪种情况和你最为贴近：</string>
    <string name="constitution_a">平和质</string>
    <string name="constitution_a_intro">精力充沛\n健康乐观</string>
    <string name="select_constitution">选择体质</string>
    <string name="constitution_option_no">没有</string>
    <string name="constitution_option_seldom">很少</string>
    <string name="constitution_option_sometimes">有时</string>
    <string name="constitution_option_often">经常</string>
    <string name="constitution_option_always">总是</string>
    <string name="feedback">建议反馈</string>
</resources>