<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/set_alarm" >

    <Preference
        android:key="time"
        android:persistent="false"
        android:title="@string/time" />

    <com.jkydjk.healthier.clock.AlarmPreference
        android:key="alarm"
        android:persistent="false"
        android:ringtoneType="alarm"
        android:showDefault="false"
        android:showSilent="true"
        android:title="@string/alert" />

    <CheckBoxPreference
        android:key="vibrate"
        android:persistent="false"
        android:title="@string/alarm_vibrate" />

    <com.jkydjk.healthier.clock.RepeatPreference
        android:key="setRepeat"
        android:persistent="false"
        android:title="@string/alarm_repeat" />

    <EditTextPreference
        android:dialogTitle="@string/label"
        android:key="label"
        android:persistent="false"
        android:title="@string/label" />

</PreferenceScreen>