<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar" >

        <Button
            android:id="@+id/back"
            style="@style/title_bar_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/back" />

        <TextView
            android:id="@+id/title_text"
            style="@style/title_bar_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/cycle" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title_bar"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginTop="12.0dip"
            android:orientation="vertical" >

            <CheckedTextView
                android:id="@+id/Monday"
                style="@style/list_block_checked_text_view"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:background="@drawable/list_blockbg_top_selector"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/Monday" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/setting_line" />

            <CheckedTextView
                android:id="@+id/Tuesday"
                style="@style/list_block_checked_text_view"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:background="@drawable/list_blockbg_middle_selector"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/Tuesday" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/setting_line" />

            <CheckedTextView
                android:id="@+id/Wednesday"
                style="@style/list_block_checked_text_view"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:background="@drawable/list_blockbg_middle_selector"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/Wednesday" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/setting_line" />

            <CheckedTextView
                android:id="@+id/Thursday"
                style="@style/list_block_checked_text_view"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:background="@drawable/list_blockbg_middle_selector"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/Thursday" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/setting_line" />

            <CheckedTextView
                android:id="@+id/Friday"
                style="@style/list_block_checked_text_view"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:background="@drawable/list_blockbg_middle_selector"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/Friday" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/setting_line" />

            <CheckedTextView
                android:id="@+id/Saturday"
                style="@style/list_block_checked_text_view"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:background="@drawable/list_blockbg_middle_selector"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/Saturday" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="@drawable/setting_line" />

            <CheckedTextView
                android:id="@+id/Sunday"
                style="@style/list_block_checked_text_view"
                android:layout_width="fill_parent"
                android:layout_height="48.0dip"
                android:background="@drawable/list_blockbg_bottom_selector"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:text="@string/Sunday" />
        </LinearLayout>
    </ScrollView>

    <!-- 标题栏下阴影 -->

    <View
        android:id="@+id/title_bar_shadow"
        android:layout_width="fill_parent"
        android:layout_height="5dip"
        android:layout_below="@+id/title_bar"
        android:background="@drawable/title_bar_shadow" />

</RelativeLayout>