<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar" >

        <Button
            android:id="@+id/cancel"
            style="@style/title_bar_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel" />

        <TextView
            android:id="@+id/title_text"
            style="@style/title_bar_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/file_browser" />

        <Button
            android:id="@+id/enter"
            style="@style/title_bar_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/enter" />
    </RelativeLayout>

    <com.jkydjk.healthier.clock.widget.FileView
        android:id="@+id/scroll_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/title_bar"
        android:background="#FFFFFFFF"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent" >
        </LinearLayout>
    </com.jkydjk.healthier.clock.widget.FileView>

    <!-- 标题栏下阴影 -->

    <ImageView
        android:id="@+id/title_bar_shadow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:contentDescription="@string/title_bar_shadow"
        android:src="@drawable/title_shadow" />

</RelativeLayout>