<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar" >

        <Button
            android:id="@+id/back"
            style="@style/title_bar_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/back" />

        <TextView
            android:id="@+id/title_text"
            style="@style/title_bar_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/feedback" />

        <Button
            android:id="@+id/enter"
            style="@style/title_bar_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/enter" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/title_bar" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/feedback"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top|left"
                android:hint="@string/feedback"
                android:padding="12dip" />
        </LinearLayout>
    </ScrollView>

    <!-- 标题栏下阴影 -->

    <ImageView
        android:id="@+id/title_bar_shadow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar"
        android:contentDescription="@string/title_bar_shadow"
        android:src="@drawable/title_shadow" />

</RelativeLayout>