<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/main_bg" >

  <!-- 标题栏 -->

  <RelativeLayout
    android:id="@+id/title_bar"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:background="@drawable/title_bar" >

    <Button
      android:id="@+id/cancel"
      style="@style/title_bar_left_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:text="@string/cancel" />

    <TextView
      android:id="@+id/title_text"
      style="@style/title_bar_title_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:text="@string/signin" />

    <Button
      android:id="@+id/enter"
      style="@style/title_bar_right_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentRight="true"
      android:text="@string/enter" />
  </RelativeLayout>

  <ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_below="@+id/title_bar"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingBottom="12.0dip"
      android:paddingLeft="10.0dip"
      android:paddingRight="10.0dip"
      android:paddingTop="12.0dip" >

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:background="@drawable/list_blockbg_top_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip" >

        <TextView
          style="@style/list_block_item_name"
          android:layout_width="100dip"
          android:layout_height="wrap_content"
          android:layout_marginRight="5dip"
          android:text="@string/username_email" />

        <EditText
          android:id="@+id/login"
          style="@style/list_block_item_edit_text"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="1.0"
          android:hint=""
          android:singleLine="true"/>
      </LinearLayout>

      <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@drawable/setting_line" />

      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:background="@drawable/list_blockbg_bottom_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="10.0dip"
        android:paddingRight="10.0dip" >

        <TextView
          style="@style/list_block_item_name"
          android:layout_width="100dip"
          android:layout_height="wrap_content"
          android:layout_marginRight="5dip"
          android:text="@string/password" />

        <EditText
          android:id="@+id/password"
          style="@style/list_block_item_edit_text"
          android:layout_width="0dip"
          android:layout_height="wrap_content"
          android:layout_weight="1.0"
          android:hint=""
          android:inputType="textPassword"
          android:singleLine="true" />
      </LinearLayout>
    </LinearLayout>
  </ScrollView>

  <!-- 标题栏下阴影 -->

  <ImageView
    android:id="@+id/title_bar_shadow"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/title_bar"
    android:contentDescription="@string/title_bar_shadow"
    android:src="@drawable/title_shadow" />

</RelativeLayout>